--- a/smarter-ai/package.json
+++ b/smarter-ai/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS='--max-old-space-size=4096' next dev",
-    "build": "pnpm cleanup && NODE_OPTIONS='--max-old-space-size=4096' next build --no-lint",
+    "dev": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next dev",
+    "build": "pnpm cleanup && cross-env NODE_OPTIONS='--max-old-space-size=4096' next build --no-lint",
     "start": "next start",
     "lint": "echo 'Linting disabled'",
     "generate": "node src/data/generateData.js",
@@ -18,59 +18,59 @@
     "@11labs/react": "^0.0.8",
     "@ai-sdk/openai": "1.3.22",
     "@anthropic-ai/sdk": "^0.39.0",
-    "@atlaskit/pragmatic-drag-and-drop": "^1.4.0",
-    "@atlaskit/pragmatic-drag-and-drop-flourish": "^1.1.3",
-    "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.0.3",
-    "@atlaskit/pragmatic-drag-and-drop-live-region": "^1.2.0",
-    "@atlaskit/pragmatic-drag-and-drop-react-drop-indicator": "^1.1.4",
+    "@atlaskit/pragmatic-drag-and-drop": "^1.7.4",
+    "@atlaskit/pragmatic-drag-and-drop-flourish": "^1.2.2",
+    "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.1.0",
+    "@atlaskit/pragmatic-drag-and-drop-live-region": "^1.3.0",
+    "@atlaskit/pragmatic-drag-and-drop-react-drop-indicator": "^1.2.0",
     "@convex-dev/auth": "^0.0.81",
-    "@internationalized/date": "^3.6.0",
-    "@livekit/components-react": "^2.9.2",
-    "@livekit/krisp-noise-filter": "^0.2.14",
-    "@livekit/protocol": "^1.35.0",
-    "@mendable/firecrawl-js": "^1.12.0",
-    "@mistralai/mistralai": "^1.5.2",
+    "@internationalized/date": "^3.8.2",
+    "@livekit/components-react": "^2.9.14",
+    "@livekit/krisp-noise-filter": "^0.2.16",
+    "@livekit/protocol": "^1.39.3",
+    "@mendable/firecrawl-js": "^1.29.1",
+    "@mistralai/mistralai": "^1.7.4",
     "@opentelemetry/api": "1.9.0",
-    "@radix-ui/react-accordion": "^1.2.2",
-    "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-navigation-menu": "^1.2.3",
-    "@radix-ui/react-popover": "^1.1.4",
-    "@radix-ui/react-progress": "^1.1.3",
-    "@radix-ui/react-radio-group": "^1.2.2",
-    "@radix-ui/react-scroll-area": "^1.2.2",
-    "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slider": "^1.2.3",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-switch": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-tooltip": "^1.1.6",
-    "@react-aria/datepicker": "^3.12.0",
-    "@react-stately/datepicker": "^3.11.0",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-aria/datepicker": "^3.15.0",
+    "@react-stately/datepicker": "^3.15.0",
     "@remixicon/react": "^4.6.0",
-    "@tanstack/react-table": "^8.20.6",
+    "@tanstack/react-table": "^8.21.3",
     "@types/uuid": "^9.0.8",
     "ai": "4.3.16",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "elevenlabs": "^1.54.0",
-    "framer-motion": "^12.5.0",
+    "elevenlabs": "^1.59.0",
+    "framer-motion": "^12.23.7",
     "funnel-graph-js": "1.4.2",
     "isomorphic-dompurify": "2.23.0",
-    "livekit-client": "^2.11.2",
-    "livekit-server-sdk": "^2.10.2",
+    "livekit-client": "^2.15.3",
+    "livekit-server-sdk": "^2.13.1",
     "lucide-react": "^0.483.0",
     "marked": "15.0.8",
     "motion": "12.12.1",
-    "next": "14.2.23",
-    "next-themes": "^0.4.4",
-    "openai": "^4.90.0",
+    "next": "15.4.3",
+    "next-themes": "^0.4.6",
+    "openai": "^4.104.0",
     "posthog-js": "1.236.7",
     "posthog-node": "4.14.0",
     "react": "18.2.0",
@@ -79,32 +79,33 @@
     "react-hot-toast": "2.5.2",
     "react-player": "2.16.0",
     "react-siriwave": "3.1.0",
-    "react-textarea-autosize": "^8.5.8",
-    "recharts": "^2.15.0",
-    "simli-client": "^1.2.8",
-    "sonner": "^2.0.3",
+    "react-textarea-autosize": "^8.5.9",
+    "recharts": "^2.15.4",
+    "simli-client": "^1.2.11",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^2.6.0",
-    "tailwind-variants": "^0.3.0",
+    "tailwind-variants": "^0.3.1",
     "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.3",
-    "use-debounce": "^10.0.4",
-    "uuid": "^11.0.3",
-    "zod": "^3.24.2"
+    "use-debounce": "^10.0.5",
+    "uuid": "^11.1.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@types/canvas-confetti": "^1.9.0",
-    "@types/node": "^22.14.0",
+    "@types/node": "^22.16.5",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
-    "@typescript-eslint/parser": "^8.0.0",
+    "@typescript-eslint/parser": "^8.38.0",
     "convex": "1.23.0",
+    "cross-env": "7.0.3",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.23",
     "knip": "5.57.2",
-    "postcss": "^8.4.49",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   }
